[package]
name = "reservoir-datastats-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde_json = "1.0.97"
aws-config = "1.1.8"
aws-sdk-s3 = "1.19.1"
tokio = { version = "1.36.0", features = ["full"] }
async-compression = {version ="0.4.6", features=["all"]}
zstd = "0.13.1"
glob = "0.3.1"
rand = "0.8"
clap = { version = "4.1.11", features = ["derive"] }
tokenizers = "=0.13.4"
rayon = "1.10.0"
indicatif = "0.17.8"
flate2 = "1.0.30"
serde = "1.0.203"
unicode-segmentation = "1.11.0"
dashmap = "6.0.0"
